tests/diagnostics/control_flow/if_condition_not_boolean/expect.txt
# exit: 1
input/main.lang0:2:8: error: if condition must be boolean
      if 1 {
         ^
